# evshow

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: build_and_test_python_app.yml
data/: sample_dsecformat.h5
eventshow/: Makefile  README.md  pyproject.toml
eventshow/src/eventshow/: _eventshow.py  main.py
eventshow/src/eventshow/event2frame/: stacking.py
eventshow/src/eventshow/readwrite/: _eventslicer.py  dsec.py
eventshow/src/readwrite/: _eventslicer.py  base.py  dsec.py  readers.py
src/: run.sh
src/eventshow/: __init__.py  __main__.py  _eventshow.py
src/eventshow/event2frame/: ai.py
src/eventshow/readwrite/: _eventslicer.py  base.py  dsec.py
src/evshow/: __init__.py  __main__.py  _evshow.py
src/evshow/event2frame/: stacking.py
src/evshow/event2frame/concentration_net/: concentration_net.py
src/evshow/event2frame/e2vid/: e2vid_net.py  timers.py  utils.py
src/evshow/event2frame/shared/: utils.py
src/evshow/readwrite/: _eventslicer.py  dsec.py
tests/: test_showdsec.py
