[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evshow"
version = "1.0.0"
authors = [
  { name="Runiku Boa", email="bao@robot.t.u-tokyo.ac.jp" },
]
description = "framerize and visualize event raw data"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3"
]

[project.scripts]
evshow = "evshow:__main__.main"
